--- a/views/layout.erb
+++ b/views/layout.erb
@@ -18,7 +18,7 @@
     <nav class="navbar navbar-default">
         <div class="container">
             <div class="navbar-header">
-                <a href="/" class="navbar-brand">Youtube</a>
+                <a href="/" class="navbar-brand">タクカリ</a>
             </div>
             <ul class="nav navbar-nav navbar-right">
                 <li>
